--- a/contact.html
+++ b/contact.html
@@ -10,32 +10,6 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark">
-        <div class="row py-2 px-lg-5">
-            <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
-                <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+92-333-5170474</small>
-                    <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</small>
-                </div>
-            </div>
-            <div class="col-lg-6 text-center text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/AeroTrack-international-courier-services/100063862313331/">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier">
-                        <i class="fab fa-youtube"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
@@ -78,7 +52,7 @@
             <div class="row">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <div class="bg-primary text-white text-center p-4 mb-4">
-                        <h4 class="m-0">B 18 AL BILAL PLAZA Chandni Chowk Flyover Satellite Town, Rawalpindi Pakistan</h4>
+                        <h4 class="m-0"><i class="fa fa-map-marker-alt mr-2"></i>1500 René-Lévesque Blvd W, Montreal, Quebec, H3H 1P8</h4>
                     </div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.0769748582634!2d73.09156607625084!3d33.64464914014857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95a1f3a1d2f3%3A0x3d4c4c4c4c4c4c4c!2sAERO%20TRACK%20INTERNATIONAL%20COURIER%20AND%20CARGO%20SERVICE!5e0!3m2!1sen!2s!4v1234567890123!5m2!1sen!2s" 
                         style="width: 100%; height: 400px; border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -123,15 +97,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Get In Touch</h3>
-                        <p><i class="fa fa-map-marker-alt mr-2"></i>B 18 AL BILAL PLAZA Chandni Chowk Flyover Satellite Town, Rawalpindi Pakistan</p>
-                        <p><i class="fa fa-mobile mr-2"></i>+92-333-5170474</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>051-4851197, 051-4927026</p>
-                        <p><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</p>
-                        <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/AeroTrack-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
-                        </div>
+                        <p style="display: flex; align-items: flex-start;"><i class="fa fa-map-marker-alt mr-2" style="margin-top: 4px;"></i><span>1500 René-Lévesque Blvd W, Montreal, Quebec, H3H 1P8</span></p>
                     </div>
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Quick Links</h3>
@@ -162,30 +128,6 @@
         </div>
     </div>
     <!-- Get In Touch & Quick Links End -->
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
-        <div class="row">
-            <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">© <a href="#">AeroTrack</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
-            </div>
-            <div class="col-lg-6 text-center text-md-right">
-                <ul class="nav d-inline-flex">
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Terms</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Help</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
     <!-- Footer End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
