--- a/services.html
+++ b/services.html
@@ -10,32 +10,6 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark">
-        <div class="row py-2 px-lg-5">
-            <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
-                <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+92-333-5170474</small>
-                    <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</small>
-                </div>
-            </div>
-            <div class="col-lg-6 text-center text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/AeroTrack-international-courier-services/100063862313331/">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier">
-                        <i class="fab fa-youtube"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
@@ -244,6 +218,58 @@
                         prices.I recieved my order timely and the parcel was also safe.
                         If you need fast delivery services then you also need to choose AeroTrack courier service.</p>
                 </div>
+                <div class="position-relative bg-secondary p-4">
+                    <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="img-fluid rounded-circle d-flex justify-content-center align-items-center" style="width: 50px; height: 50px; background-color: #c0c0c0;">
+                            <i class="fa fa-2x fa-user"></i>
+                        </div>
+                        <div class="ml-3">
+                            <h6 class="font-weight-semi-bold m-0">Ahmed Hassan</h6>
+                            <small>Client</small>
+                        </div>
+                    </div>
+                    <p class="m-0">AeroTrack has been my go-to courier service for all international shipments. Their rates are competitive, tracking is accurate, and customer service is always helpful. Highly recommend!</p>
+                </div>
+                <div class="position-relative bg-secondary p-4">
+                    <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="img-fluid rounded-circle d-flex justify-content-center align-items-center" style="width: 50px; height: 50px; background-color: #c0c0c0;">
+                            <i class="fa fa-2x fa-user"></i>
+                        </div>
+                        <div class="ml-3">
+                            <h6 class="font-weight-semi-bold m-0">Sara Khan</h6>
+                            <small>Client</small>
+                        </div>
+                    </div>
+                    <p class="m-0">Excellent service! My parcel arrived on time and in perfect condition. The staff was professional and kept me updated throughout the delivery process. Will definitely use AeroTrack again.</p>
+                </div>
+                <div class="position-relative bg-secondary p-4">
+                    <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="img-fluid rounded-circle d-flex justify-content-center align-items-center" style="width: 50px; height: 50px; background-color: #c0c0c0;">
+                            <i class="fa fa-2x fa-user"></i>
+                        </div>
+                        <div class="ml-3">
+                            <h6 class="font-weight-semi-bold m-0">Muhammad Ali</h6>
+                            <small>Business Owner</small>
+                        </div>
+                    </div>
+                    <p class="m-0">As a business owner, I rely on AeroTrack for all my cargo needs. They handle large shipments efficiently and their door-to-door service is unmatched. Great value for money!</p>
+                </div>
+                <div class="position-relative bg-secondary p-4">
+                    <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="img-fluid rounded-circle d-flex justify-content-center align-items-center" style="width: 50px; height: 50px; background-color: #c0c0c0;">
+                            <i class="fa fa-2x fa-user"></i>
+                        </div>
+                        <div class="ml-3">
+                            <h6 class="font-weight-semi-bold m-0">Fatima Tariq</h6>
+                            <small>Client</small>
+                        </div>
+                    </div>
+                    <p class="m-0">Very impressed with AeroTrack! Fast delivery, secure packaging, and affordable rates. The online tracking system is easy to use and provides real-time updates. Highly satisfied!</p>
+                </div>
             </div>
         </div>
     </div>
@@ -256,15 +282,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Get In Touch</h3>
-                        <p><i class="fa fa-map-marker-alt mr-2"></i>B 18 AL BILAL PLAZA Chandni Chowk Flyover Satellite Town, Rawalpindi Pakistan</p>
-                        <p><i class="fa fa-mobile mr-2"></i>+92-333-5170474</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>051-4851197, 051-4927026</p>
-                        <p><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</p>
-                        <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/AeroTrack-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
-                        </div>
+                        <p style="display: flex; align-items: flex-start;"><i class="fa fa-map-marker-alt mr-2" style="margin-top: 4px;"></i><span>1500 René-Lévesque Blvd W, Montreal, Quebec, H3H 1P8</span></p>
                     </div>
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Quick Links</h3>
@@ -295,30 +313,6 @@
         </div>
     </div>
     <!-- Get In Touch & Quick Links End -->
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
-        <div class="row">
-            <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">© <a href="#">AeroTrack</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
-            </div>
-            <div class="col-lg-6 text-center text-md-right">
-                <ul class="nav d-inline-flex">
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Terms</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Help</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
     <!-- Footer End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
