--- a/tracking.html
+++ b/tracking.html
@@ -516,7 +516,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Get In Touch</h3>
-                        <p style="display: flex; align-items: flex-start;"><i class="fa fa-map-marker-alt mr-2" style="margin-top: 4px;"></i><span>1500 René-Lévesque Blvd W, Montreal, Quebec, H3H 1P8</span></p>
+                        <p style="display: flex; align-items: flex-start;"><i class="fa fa-map-marker-alt mr-2" style="margin-top: 4px;"></i><span>1500 Renï¿½-Lï¿½vesque Blvd W, Montreal, Quebec, H3H 1P8</span></p>
                     </div>
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Quick Links</h3>
