--- a/admin.html
+++ b/admin.html
@@ -676,7 +676,7 @@
 
                 <!-- SHIPMENT DETAILS SECTION -->
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 30px; margin-bottom: 15px;">
-                    <h3 class="section-title" style="margin: 0; border: none; padding: 0;">Shipment Details</h3>
+                    <h3 class="section-title" style="margin: 0; border: none; padding: 0;">POD Details</h3>
                     <button class="btn btn-small" onclick="openCustomDetailModal()">+ Add Detail</button>
                 </div>
                 <p style="color: #666; font-size: 13px; margin-top: -10px; margin-bottom: 15px;">All shipment information fields (Service, Shipped Date, Category, Weight, etc.). Fully customizable.</p>
@@ -709,7 +709,7 @@
                 ` : '<p style="color: #999; text-align: center; padding: 20px;">Optional: Set a customer name for the POD greeting.</p>'}
                 
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; margin-top: 20px;">
-                    <h4 style="margin: 0; font-size: 16px; color: #666;">POD Details</h4>
+                    <h4 style="margin: 0; font-size: 16px; color: #666;">Shipment Details</h4>
                     <button class="btn btn-small" onclick="openPODDetailModal()">+ Add POD Detail</button>
                 </div>
                 ${podDetails && podDetails.length > 0 ? `
