--- a/track.html
+++ b/track.html
@@ -198,11 +198,11 @@
         }
         .track-input:focus {
             outline: none;
-            border-color: #0066cc;
+            border-color: #d32f2f;
         }
         .track-btn {
             width: 100%;
-            background: #0066cc;
+            background: #d32f2f;
             color: white;
             padding: 12px;
             border: none;
@@ -212,7 +212,7 @@
             font-size: 15px;
         }
         .track-btn:hover {
-            background: #0052a3;
+            background: #b71c1c;
         }
         /* Fraud Alert */
         .fraud-alert {
@@ -819,7 +819,7 @@
                 `;
             } else if (latestEvent) {
                 // Package is in transit - show latest status
-                deliveryStatusDiv.style.background = '#0077c8';
+                deliveryStatusDiv.style.background = '#d32f2f';
                 deliveryStatusDiv.innerHTML = `
                     <i class="fas fa-shipping-fast"></i>
                     <div class="delivery-text">
