--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <div class="bg-primary py-5 px-4 px-sm-5" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/header.jpg');">
+                    <div class="bg-primary py-5 px-4 px-sm-5" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/4.jpeg');">
                         <form class="py-5" name="sentMessage" id="contactForm" action="https://formspree.io/f/xqedzwwe" method="POST" target="hidden_iframe">
                             <input type="hidden" name="_subject" value="Quote Request - Services Page">
                             <div id="success"></div>
