--- a/about-us.html
+++ b/about-us.html
@@ -50,7 +50,19 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/about.jpg" alt="">
+                    <div id="aboutCarousel" class="carousel slide" data-ride="carousel" data-interval="1600">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="img-fluid w-100" src="img/5.jpeg" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid w-100" src="img/1.jpeg" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid w-100" src="img/3.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
                     <div class="bg-primary text-white text-center p-4">
                         <h3 class="m-0 text-white">25+ Years Experience</h3>
                     </div>
@@ -73,7 +85,7 @@
         <div class="container">
             <div class="row align-items-center py-5">
                 <div class="col-lg-5">
-                    <img class="img-fluid w-100" src="img/feature.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/2.jpeg" alt="">
                 </div>
                 <div class="col-lg-7 py-5 py-lg-0">
                     <h6 class="text-primary text-uppercase font-weight-bold">Why Choose Us</h6>
