--- a/index.html
+++ b/index.html
@@ -161,7 +161,19 @@ document.addEventListener('DOMContentLoaded', function() {
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/about.jpg" alt="">
+                    <div id="aboutCarousel" class="carousel slide" data-ride="carousel" data-interval="1600">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="img-fluid w-100" src="img/5.jpeg" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid w-100" src="img/1.jpeg" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="img-fluid w-100" src="img/3.jpeg" alt="">
+                            </div>
+                        </div>
+                    </div>
                     <div class="bg-primary text-white text-center p-4">
                         <h3 class="m-0 text-white">25+ Years Experience</h3>
                     </div>
@@ -245,7 +257,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <div class="bg-primary py-5 px-4 px-sm-5" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/header.jpg');">
+                    <div class="bg-primary py-5 px-4 px-sm-5" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/4.jpeg');">
                         <form class="py-5" name="sentMessage" id="contactForm" action="https://formspree.io/f/xqedzwwe" method="POST" target="hidden_iframe">
                             <input type="hidden" name="_subject" value="Quote Request">
                             <div id="success"></div>
@@ -328,7 +340,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <div class="container">
             <div class="row align-items-center py-5">
                 <div class="col-lg-5">
-                    <img class="img-fluid w-100" src="img/feature.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/2.jpeg" alt="">
                 </div>
                 <div class="col-lg-7 py-5 py-lg-0">
                     <h6 class="text-primary text-uppercase font-weight-bold">Why Choose Us</h6>
@@ -501,7 +513,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-4.jpg" alt="">
+                        <img class="card-img-top" src="img/team-4.jpeg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Full Name</h5>
