--- a/admin.html
+++ b/admin.html
@@ -382,12 +382,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label>Event Title *</label>
-                        <input type="text" id="eventTitle" required placeholder="e.g., Delivered">
+                        <label>Event Title</label>
+                        <input type="text" id="eventTitle" placeholder="e.g., Delivered">
                     </div>
                     <div class="form-group">
-                        <label>Event Description</label>
-                        <textarea id="eventDescription" placeholder="e.g., DELIVERED"></textarea>
+                        <label>Event Description *</label>
+                        <textarea id="eventDescription" required placeholder="e.g., DELIVERED"></textarea>
                     </div>
                     <div class="form-group">
                         <label>Location</label>
@@ -800,7 +800,7 @@
             const eventDescription = document.getElementById('eventDescription').value;
             const eventLocation = document.getElementById('eventLocation').value;
 
-            if (!eventDate || !eventTime || !eventTitle) {
+            if (!eventDate || !eventTime || !eventDescription) {
                 showAlert('Please fill in all required fields', 'error');
                 return;
             }
